# OmniDev

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  LICENSE  Makefile  PROJECT.md  README.md  README_SETUP.md  SETUP_COMPLETE.md  SETUP_OPENROUTER.md  pyproject.toml  setup_environment.ps1  setup_environment.sh  verify_setup.py
src/omnidev/: __init__.py
src/omnidev/actions/: __init__.py  backup.py  file_ops.py  git_ops.py  validator.py
src/omnidev/agents/: __init__.py  base.py  context_agent.py  crews.py  file_agent.py  manager.py  router_agent.py  setup_agent.py  task_agent.py  validator_agent.py
src/omnidev/cli/: __init__.py  agent_bridge.py  main.py  repl.py  setup_wizard.py
src/omnidev/cli/commands/: __init__.py  slash.py
src/omnidev/cli/ui/: __init__.py  components.py  interactive.py
src/omnidev/context/: __init__.py  builder.py  indexer.py  manager.py  scorer.py
src/omnidev/core/: __init__.py  config.py  exceptions.py  logger.py  session.py
src/omnidev/models/: __init__.py  base.py  registry.py  router.py
src/omnidev/models/providers/: __init__.py  anthropic.py  google.py  gpt4free.py  groq.py  openai.py  openrouter.py
src/omnidev/modes/: __init__.py  agent.py  auto_select.py  base.py  manual.py  planning.py
src/omnidev/prompts/: __init__.py  llm_helper.py  loader.py
src/omnidev/prompts/agents/: base_agent.txt  context_agent.txt  file_agent.txt  router_agent.txt  setup_agent.txt  task_agent.txt  validator_agent.txt
src/omnidev/prompts/best_practices/: __init__.py  architecture.txt  error_recovery.txt  performance.txt  python_standards.txt  security.txt
src/omnidev/prompts/llm/: __init__.py  code_generation.txt  code_review.txt  documentation.txt  error_handling.txt  refactoring.txt  testing.txt
src/omnidev/prompts/templates/: agent_mode.txt  planning_mode.txt  task_template.txt
src/omnidev/tools/: __init__.py
src/omnidev/utils/: __init__.py  helpers.py  security.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_agent_integration.py  test_mode_agent_integration.py  test_modes.py  test_prompt_agent_integration.py
tests/unit/: __init__.py  test_agent_manager.py  test_base_agent.py  test_cli.py  test_config.py  test_context_agent.py  test_crews.py  test_exceptions.py  test_file_agent.py  test_file_ops.py  test_prompts.py  test_providers.py  test_router_agent.py  test_setup_agent.py  test_slash_commands.py  test_task_agent.py  test_ui.py  test_validator_agent.py
